[tool.poetry]
name = "promptkit"
version = "0.0.1"
description = "Lightweight prompt engineering toolkit"
authors = ["Shroominic <pleurae-berets.0u@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.0"
python-dotenv = "^1.0.0"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
